--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>PHS-Downloader</title>
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic">
-        <link rel="stylesheet" type="text/css" href="../bower_components/angular-material/angular-material.css">
-        <link rel="stylesheet" type="text/css" href="styles/app.css">
-        <style type="text/css">
-            .ng-cloak,
-            .x-ng-cloak,
-            [data-ng-cloak],
-            [ng-cloak],
-            [ng\:cloak],
-            [x-ng-cloak] {
-                display: none !important;
-            }
+  <head>
+    <meta charset="UTF-8">
+    <title>Hello World!</title>
+  </head>
+  <body ng-app="phs_downloader">
+    We are using node <script>document.write(process.versions.node)</script>,
+    Chrome <script>document.write(process.versions.chrome)</script>,
+    and Electron <script>document.write(process.versions.electron)</script>.
 
-        </style>
-    </head>
-    <body ng-app="phs_downloader" ng-cloak>
-        <ng_header></ng_header>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-        <script src="scripts/app/app.js"></script>
-        <script src="scripts/app/controllers.js"></script>
-        <script src="scripts/app/directives.js"></script>
-    </body>
+    <ng-header></ng-header>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+    <script src="app/app.js"></script>
+  </body>
 </html>
