--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <ng-header></ng-header>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/controllers.js"></script>
+    <script src="app/directives.js"></script>
+    <script src="app/services.js"></script>
   </body>
 </html>
